[tool.poetry]
name = "lindo"
version = "0.1.0"
description = ""
authors = ["Fedorov <atiliogoulart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-RESTful = "^0.3.9"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
